--- a/style.css
+++ b/style.css
@@ -21,15 +21,16 @@ body {
 /* HLAVICKA */
 
 .hlavicka {
+  background-image: url(images/island-hlavicka.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(images/island-hlavicka.jpg);
   max-width: 100%;
   height: auto;
   position: relative;
   padding: 20px;
   z-index: -1;
+  margin: 0;
 }
 
 .titulek, .perex, .autor {
@@ -270,14 +271,11 @@ h2 {
     flex-basis: calc(100% / 3);
   }
 
-  .hlavicka {
-    margin-bottom: -50px;
-  }
   .obsah {
   max-width: 960px;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: -100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -50px;
   box-shadow: -2px 0px 10px 1px #808080;
   background-color: white;
   z-index: 4;
@@ -292,21 +290,22 @@ h2 {
   padding-right: 200px
 }
 
-.hlavicka {
-  min-height: 400px;
-}
 .titulek {
   font-size: 58px;
+  margin-top: 40px;
+  padding-top: -20px;
 }
 .perex {
   font-size: 16px;
 }
 .autor {
   font-size: 16px;
+  margin-bottom: 40px;
 }
 .titulek, .perex, .autor {
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 200px;
+  padding-right: 200px;
+  /* margin: 40px; */
 }
 
 
@@ -329,6 +328,7 @@ h2 {
 .paticka {
   background-color: #f5f5f5;
   color: grey;
+  margin-left: 100px;
   }
 
 }
